# cv-analyzer

./: .gitignore  pyproject.toml
src/config/: settings.yaml
